sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:5: error: not found: value j
    var i=j
          ^AlgInsertionSort:7: error: not found: value v
      if (plusPetit(v,i-j)) {
                    ^